--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.19.0",
+    "algoliasearch": "^4.14.2",
     "autoprefixer": "^10.4.11",
     "next": "12.3.0",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.1.8"
+    "react-instantsearch-dom": "^6.32.1",
+    "tailwindcss": "^3.1.8",
+    "typesense-instantsearch-adapter": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
